# IndegoRover

./: .gitignore  .gitmodules  README.md
fw/test_01/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
fw/test_01/main/: CMakeLists.txt  adc.c  adc.h  cam.c  cam.h  drive_motor.c  drive_motor.h  i2c.c  i2c.h  idf_component.yml  lawn_motor.c  lawn_motor.h  main.c  rtc_wake_stub_example.c
hw/: indego_adapter.brd  indego_adapter.sch  rtk1010_test.brd  rtk1010_test.sch  shc_con.lbr  used-rules.dru
kicad/IndegoMower/: #auto_saved_files#  IndegoMower.kicad_pcb  IndegoMower.kicad_prl  IndegoMower.kicad_pro  IndegoMower.kicad_sch  _autosave-IndegoMower.kicad_sch  esp32.kicad_sch  extension_bus.kicad_sch  fp-info-cache  gps.kicad_sch  imu.kicad_sch  indego_connector.kicad_sch  main.kicad_sch  motor_driver.kicad_sch  powersupply.kicad_sch  powersupply.kicad_sch-bak  processor.kicad_sch  rpi.kicad_sch  sym-lib-table
kicad/IndegoMower/gerber/: IndegoMower-B_Cu.gbr  IndegoMower-B_Silkscreen.gbr  IndegoMower-Edge_Cuts.gbr  IndegoMower-F_Paste.gbr  IndegoMower-F_Silkscreen.gbr  IndegoMower-NPTH.drl
kicad/MainPCB/: IndegoMower.kicad_pcb  IndegoMower.kicad_prl  IndegoMower.kicad_pro  IndegoMower.kicad_sch  esp32.kicad_sch  extension_bus.kicad_sch  fp-info-cache  fp-lib-table  gps.kicad_sch  imu.kicad_sch  indego_connector.kicad_sch  motor_driver.kicad_sch  powersupply.kicad_sch  processor.kicad_sch  processor.kicad_sch-bak  rpi.kicad_sch
kicad/MainPCB/gerber/: IndegoMower-B_Cu.gbr  IndegoMower-B_Mask.gbr  IndegoMower-B_Paste.gbr  IndegoMower-B_Silkscreen.gbr  (+8 more)
(+11 files in other folders)
