idf_component_register(SRCS "lawn_motor.c" "main.c"
                        "adc.c"
                        "i2c.c"
                        "cam.c"
                        "drive_motor.c"
                        "lawn_motor.c"
                        "rtc_wake_stub_example.c"
                    INCLUDE_DIRS "." )
